// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-repeater Empty 1`] = `
<div
  class="m-repeater"
>
  <ul
    class="m-repeater__list"
  >
    <li
      class="m-repeater__row m--is-empty"
    >
      
            The list is empty
        
    </li>
    <li
      class="m-repeater__footer"
    >
      <!---->
    </li>
  </ul>
</div>
`;

exports[`Storyshots modul-components|m-repeater Operations 1`] = `
<div
  class="m-repeater"
>
  <ul
    class="m-repeater__list"
  >
    <li
      class="m-repeater__row"
    >
      <div
        class="m-repeater__col"
      >
        
                    #0 Custom template for item (id: 324525 name: Albert Einstein)
                
      </div>
       
      <!---->
    </li>
    <li
      class="m-repeater__row"
    >
      <div
        class="m-repeater__col"
      >
        
                    #1 Custom template for item (id: 64564556 name: Nikola Tesla)
                
      </div>
       
      <!---->
    </li>
    <li
      class="m-repeater__footer"
    >
      <!---->
    </li>
  </ul>
</div>
`;

exports[`Storyshots modul-components|m-repeater With items (Custom item template) 1`] = `
<div
  class="m-repeater"
>
  <ul
    class="m-repeater__list"
  >
    <li
      class="m-repeater__row"
    >
      <div
        class="m-repeater__col"
      >
        
                    Item # 0 fakeId
                
      </div>
       
      <svg
        aria-hidden="true"
        class="m-icon m-repeater__delete"
        height="20px"
        icon-name="m-svg__delete"
        title="Supprimer"
        width="20px"
      >
        <!---->
         
        <use
          aria-hidden="true"
          class=""
        />
      </svg>
    </li>
    <li
      class="m-repeater__row"
    >
      <div
        class="m-repeater__col"
      >
        
                    Item # 1 fakeId
                
      </div>
       
      <svg
        aria-hidden="true"
        class="m-icon m-repeater__delete"
        height="20px"
        icon-name="m-svg__delete"
        title="Supprimer"
        width="20px"
      >
        <!---->
         
        <use
          aria-hidden="true"
          class=""
        />
      </svg>
    </li>
    <li
      class="m-repeater__footer"
    >
      <a
        class="m-link m-add m--is-unvisited m--is-button m--has-left-icon m--has-content"
        href="#"
        role="button"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-link__icon"
          height="24px"
          width="24px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <span
          class="m-link__text"
        >
          Ajouter
        </span>
         
        <!---->
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots modul-components|m-repeater With items (Custom row template) 1`] = `
<div
  class="m-repeater"
>
  <ul
    class="m-repeater__list"
  >
    <li>
      <button>
        Delete
      </button>
      
                    Item # 0 fakeId
                
    </li>
    <li>
      <button>
        Delete
      </button>
      
                    Item # 1 fakeId
                
    </li>
    <li
      class="m-repeater__footer m--is-slot-row"
    >
      <a
        class="m-link m-add m--is-unvisited m--is-button m--has-left-icon m--has-content"
        href="#"
        role="button"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-link__icon"
          height="24px"
          width="24px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <span
          class="m-link__text"
        >
          Ajouter
        </span>
         
        <!---->
      </a>
    </li>
  </ul>
</div>
`;
